WEB-3254 - Spacing Issue Fixed

--- a/front-end/Assets/src/css/modules/_resource-hub-trials.scss
+++ b/front-end/Assets/src/css/modules/_resource-hub-trials.scss
@@ -44,17 +44,16 @@
 		}
 		
 		ol{
-			display:inline;
+			display:table;
+			margin:0 auto;
 		}
 		li {
 			width: 90%;
-			
 			@include media(breakpointLarge) {
-				width: 30%;
-				--margin: 1rem 1rem;
-				margin: 1rem auto;
+				width: 45%;
+				padding: 0 2rem;
+				display: table-cell;
 			}
-			
 			select {
 				font-size: 1rem;
 			}
@@ -90,7 +89,7 @@
 			width: 100%;
 		}
 		@include media(breakpointLarge){
-			width: 55%;
+			--width: 55%;
 		}
 	}
 	fieldset {
